<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/trending1" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_exercice_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_exercice_name"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        style="@style/TitleTextStyle"
        android:layout_marginLeft="15dp"/>

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        android:layout_marginRight="5dp"/>

    <TextView
        android:id="@+id/popup_exercice_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/popup_exercice_description"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        style="@style/TitleTextStyle"/>

    <TextView
        android:id="@+id/popup_exercice_little_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_exercice_little_description"
        app:layout_constraintStart_toStartOf="@+id/popup_exercice_description"
        app:layout_constraintTop_toBottomOf="@+id/popup_exercice_description"
        style="@style/DefaultTextStyle"/>

    <TextView
        android:id="@+id/popup_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/popup_difficulty"
        app:layout_constraintStart_toStartOf="@+id/popup_exercice_little_description"
        app:layout_constraintTop_toBottomOf="@+id/popup_exercice_little_description"
        style="@style/TitleTextStyle"/>

    <TextView
        android:id="@+id/popup_difficulty_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_difficulty_description"
        app:layout_constraintStart_toStartOf="@+id/popup_difficulty"
        app:layout_constraintTop_toBottomOf="@+id/popup_difficulty"
        style="@style/DefaultTextStyle"/>

    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_difficulty_description" />

    <ImageView
        android:id="@+id/like_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_like"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation"
        tools:layout_editor_absoluteX="10dp" />



</androidx.constraintlayout.widget.ConstraintLayout>